Fri Aug  5 14:07:24 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/gam_error.h libgamin/gam_api.c libgamin/gam_fork.c python/gamin.c
	  server/gam_debugging.c server/gam_dnotify.c server/gam_eq.c
	  server/gam_fs.c server/gam_inotify.c server/gam_server.c
	  server/gam_server.h server/gam_tree.c tests/testing.c: code cleanups
	  for reports from gcc and sparse.

Fri Aug  5 11:52:56 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: tiny fix for the python package

2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_eq.c: (gam_eq_queue), (gam_eq_flush): Fix a segfault when the
	event queue is empty. Add some GAM_DEBUG's supressed by GAM_EQ_VERBOSE.

2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_is_running):
	* server/gam_inotify.h: Add gam_inotify_is_running. Returns TRUE when
	the inotify backend is being used.
	* server/gam_server.c: (gam_server_emit_one_event): Use gam_queue_event
	when gam_inotify_is_running() == TRUE. This should not effect the dnotify
	behaviour.

2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>

	* server/Makefile.am: Compile gam_eq.c
	* server/gam_connection.c: (gam_connection_close),
	(gam_connection_eq_flush), (gam_connection_new), (gam_queue_event):
	* server/gam_connection.h: Hookup the event queue. BUT, It's not used yet.
	* server/gam_eq.c: (gam_eq_event_new), (gam_eq_event_free),
	(gam_eq_new), (gam_eq_free), (gam_eq_queue), (gam_eq_size),
	(gam_eq_flush_callback), (gam_eq_flush):
	* server/gam_eq.h:
	An event queue that will be per-connection when finished. Provides limited
	but effective flow control. 
	* server/gam_poll.c: (poll_file): Enable poll limiter now that we have
	proper defaults for local filesystems.

2005-08-03  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_fs.c: (gam_fs_init): Tweak defaults yet again.

2005-08-03  John McCutchan  <ttb@tentacle.dhs.org>

	* server/Makefile.am: