@@ -706,7 +706,7 @@ retry:
     {
 #ifdef SO_PEERCRED
         struct ucred cr;
-        int cr_len = sizeof(cr);
+        socklen_t cr_len = sizeof(cr);
 
         if (getsockopt(fd, SOL_SOCKET, SO_PEERCRED, &cr, &cr_len) ==
             0 && cr_len == sizeof(cr)) {
